--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,12 +17,32 @@ spec:
         image: sivaseturaj/pos-app-by-react:1.1.0
         ports:
         - containerPort: 80
+        livenessProbe:  #probes section
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        startupProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          failureThreshold: 5
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: pos-app-service
 spec:
+  #type: NodePort
   selector:
     app: pos-app
   ports:
