Change replicas from 2 to 4 in deployment.yaml
Updated the number of replicas for the deployment.

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: pos-app
-  replicas: 2 # Update the replicas from 2 to 4
+  replicas: 2 
   template:
     metadata:
       labels:
